# explainable-cell-graphs

./: .devcontainer.json  .gitignore  CITATION.bib  Dockerfile  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
cell_graphs/: cv.py  ensemble.py  nested_cv.py  train.py
cell_graphs/common/logging/: logger.py  wandb.py
cell_graphs/common/utils/: columns.py  config.py  constants.py  helpers.py  tensors.py  wandb.py
cell_graphs/configs/: base.py
cell_graphs/configs/cv/: cv_config.py  nested_cv_config.py
cell_graphs/configs/data/: data_loaders.py  datasets.py  splitter.py
cell_graphs/configs/ensemble/: ensemble_config.py
cell_graphs/configs/logging/: wandb.py
cell_graphs/configs/metrics/: metrics.py
cell_graphs/configs/models/: gnn.py  mil.py
cell_graphs/configs/stores/: cv.py  ensemble.py  shared.py  train.py
cell_graphs/configs/training/: train_config.py  trainer.py
cell_graphs/data/datasets/: external_dataset.py  lung_dataset.py
cell_graphs/data/structures/: collator.py  graph_bag.py
cell_graphs/data/structures/tests/: test_graph_bag.py
cell_graphs/data/transforms/: sparse.py
cell_graphs/ml/cv/: cv.py  ensemble.py  nested_cv.py
cell_graphs/ml/data/: splitter.py
cell_graphs/ml/loss/: bce.py  coxph.py
cell_graphs/ml/metrics/: loss.py  survival.py
cell_graphs/ml/models/: backbones.py  fuser.py  mil.py
cell_graphs/ml/training/: trainer.py
data/: .gitignore  download_external_data.py
